# ICA-RADICAL

./: CMakeLists.txt  README.txt  core.hpp  prereqs.hpp
arma_extend/: arma_extend.hpp
core/: load.hpp  load_impl.hpp  normalize_labels.hpp  save.hpp
math/: lin_alg.cpp  lin_alg.hpp  random.hpp
src/: CMakeLists.txt  detrend.c  radical.hpp  radical_main.cpp
tests/: CMakeLists.txt
util/: prefixedoutstream.hpp  save_restore_utility.cpp  save_restore_utility.hpp
